[gd_scene load_steps=2 format=2]

[ext_resource path="res://Task/TaskItem.gd" type="Script" id=1]

[node name="Panel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -380.0
margin_bottom = -250.0
script = ExtResource( 1 )

[node name="task_lable" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 40.0
margin_bottom = 7.0
text = "task"

[node name="progress_lable" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -21.0
margin_top = -7.0
margin_bottom = 7.0
text = "0"

[node name="slash" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -21.0
margin_top = -7.0
margin_bottom = 7.0
text = "/"
align = 1

[node name="max_progress_lable" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -21.0
margin_top = -7.0
margin_bottom = 7.0
text = "0"
align = 2
